--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
-        <img src="{{user.photoUrl}}" alt="{{user.knownAs}}" class="card-img-top img-thumbnail">
+        <img src="{{photoUrl}}" alt="{{user.knownAs}}" class="card-img-top img-thumbnail">
         <div class="card-body">
           <div>
             <strong>Location:</strong>
@@ -57,9 +57,8 @@
             </form>
           </tab>
           <tab heading="Edit Photos">
-            <P>Photo edit will be here</P>
+            <app-photo-editor [photos]="user.photos" (getMemberPhotoChange)="updateMainPhoto($event)"></app-photo-editor>
           </tab>
-
         </tabset>
       </div>
     </div>
